--- a/python.html
+++ b/python.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso Python</title>
     <link rel="stylesheet" href="css/ind.css">
+    <link rel="shortcut icon" href="img/faviconpy-32x32.png" type="image/png>
 </head>
 <body>
         <div id = "prim">
