--- a/python.html
+++ b/python.html
@@ -66,6 +66,15 @@
                         <li><a href="https://docs.microsoft.com/es-mx/learn/modules/python-lists/" target="_blank">Administración de una secuencia de datos mediante listas de Python</a></li>
                         <p>Aprenda a usar listas para administrar una colección de datos. Use las funciones auxiliares para manipular la lista. Use la instrucción for para recorrer en iteración la lista. 
                         </p>
+                        <a id="but2"
+                        href="https://github.com/JuanCarlosD33/reto1/blob/main/challenges/python-lists/exercise1.py"
+                        target="_blank">Ejercicio 1</a>
+                        <a id="but2"
+                        href="https://github.com/JuanCarlosD33/reto1/blob/main/challenges/python-lists/exercise2.py"
+                        target="_blank">Ejercicio 2</a>
+                        <a id="but2"
+                        href="https://github.com/JuanCarlosD33/reto1/blob/main/challenges/  python-lists/challenge1.py"
+                        target="_blank">Desafio 1</a>
                         <li><a href="https://docs.microsoft.com/es-mx/learn/modules/python-functions/" target="_blank">Creación de funcionalidad reutilizable con funciones en Python</a></li>
                         <p>Defina funciones para crear código modular encapsulado que acepte la entrada y devuelva resultados. 
                         </p>
