--- a/python.html
+++ b/python.html
@@ -78,6 +78,14 @@
                         <li><a href="https://docs.microsoft.com/es-mx/learn/modules/python-functions/" target="_blank">Creación de funcionalidad reutilizable con funciones en Python</a></li>
                         <p>Defina funciones para crear código modular encapsulado que acepte la entrada y devuelva resultados. 
                         </p>
+                        <a id = "but2" href="https://github.com/JuanCarlosD33/reto1/blob/main/challenges/python-functions/exercise1.py" target="_blank">Ejercicio 1</a>
+                        <a id = "but2" href="https://github.com/JuanCarlosD33/reto1/blob/main/challenges/python-functions/exercise2.py" target="_blank">Ejercicio 2</a>
+                        <a id = "but2" href="https://github.com/JuanCarlosD33/reto1/blob/main/challenges/python-functions/exercise3.py" target="_blank">Ejercicio 3</a>
+                        <a id = "but2" href="https://github.com/JuanCarlosD33/reto1/blob/main/challenges/python-functions/deck.py" target="_blank">Baraja</a>
+                        <a id = "but2" href="https://github.com/JuanCarlosD33/reto1/blob/main/challenges/python-functions/challenge.py" target="_blank">Desafio 1</a>
+                        <a id = "but2" href="https://github.com/JuanCarlosD33/reto1/blob/main/challenges/python-functions/processor.py" target="_blank">Procesador</a>
+                        <hr color="gold" size=1>
+                        <br>
                         <a id = "but2" href="https://docs.microsoft.com/es-mx/learn/paths/python-first-steps/" target="_blank">Ir al curso</a>
                     </ul> 
                 </div>
